# CeresSharp

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  build.cmd  build.fsx  build.sh  buildIpOptLinux.sh  buildIpOptMac.sh  buildnative.cmd  buildnative.sh  buildnativelocal.cmd  buildnativelocal.sh  deploy.targets  global.json  ipopt-version.txt  paket.dependencies
.config/: dotnet-tools.json
.github/: buildmac.sh
.github/workflows/: publish.yml  test-ipopt-linux.yml  test-publish.yml  test.yml
src/: Aardvark.Optimization.sln  Ceres.sln  CeresNative.sln
src/Aardvark.Base.AutoDiff/: Aardvark.Base.AutoDiff.fsproj  CodeGen.fsx  Geometry.fs  Math.fs  Scalar.fs  Trafos.fs  paket.template
src/Apps/: Apps.fsproj  BundlerViewer.fs  Program.fs  SponzaPhotos.fs  paket.references
src/Bundler/: Apps.fs  Bundler.fs  Bundler.fsproj  BundlerProblem.fs  FeatureDetector.fs  Match.fs  Program.fs  Utilities.fs  paket.references
src/Ceres/: Ceres.fsproj  CeresRaw.fs  CodeGen.fsx  Config.fs  CostFunctionGenerator.fsx  DerivativeSolver.fs  Derivatives.fs  Geometry.fs  Math.fs  Problem.fs  ProblemExtensions.fs  ProblemExtensionsGenerated.fs  Program.fs  Projections.fs  Scalar.fs  Tools.fs  Trafos.fs  paket.references  paket.template
src/Ceres.Demo/: Ceres.Demo.fsproj  Program.fs
src/CeresCpp/: CeresCpp.cpp  CeresCpp.vcxproj  CeresCpp.vcxproj.filters  ReadMe.txt  (+2 more)
src/CeresNative/: CMakeLists.txt  CeresNative.cpp  CeresNative.h  CeresNative.vcxproj  CeresNative.vcxproj.filters  Makefile  Makefile-mac  ReadMe.txt  stdafx.cpp  stdafx.h
src/CeresNative/cmake/: Aardvark.cmake
(+57 files in other folders)
